// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTable rendering render with error Props 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="tasks-table-error"
  msg="Could not receive data: null"
/>
`;

exports[`TasksTable rendering render with loading Props 1`] = `
<div
  className="tasks-table"
>
  <Table
    key="tasks-table"
    rows={
      Array [
        "a",
      ]
    }
  />
  <PaginationWrapper
    className="tasks-pagination"
    dropdownButtonId="tasks-table-dropdown"
    itemCount={2}
    onChange={[Function]}
    pagination={
      Object {
        "page": 1,
        "perPage": 10,
      }
    }
    viewType="table"
  />
</div>
`;

exports[`TasksTable rendering render with minimal Props 1`] = `
<div
  className="tasks-table"
>
  <Table
    key="tasks-table"
    rows={
      Array [
        "a",
        "b",
      ]
    }
  />
  <PaginationWrapper
    className="tasks-pagination"
    dropdownButtonId="tasks-table-dropdown"
    itemCount={2}
    onChange={[Function]}
    pagination={
      Object {
        "page": 1,
        "perPage": 10,
      }
    }
    viewType="table"
  />
</div>
`;

exports[`TasksTable rendering render with no results 1`] = `
<span>
  No Tasks
</span>
`;
